2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/MathConverter.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.cpp, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.pkg, src/components/ogre/scripting/bindings/lua/helpers/lua_Helpers.cpp: updated bindings

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: added more terrain editing functionality
    
2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/WorldEmberEntity.cpp, src/components/ogre/WorldEmberEntity.h: removed temporary references to TerrainEditor
    
2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/server/ServerService.h: cleaned up sigc includes

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/model/Model.cpp, src/components/ogre/model/Model.h: override the MovableObject::IsVisible() method to take into account the system wide visibility flag for all Models

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>
