@@ -1,0 +1,25 @@
+INCLUDES = -I$(top_srcdir)/src -I$(srcdir)/Ice  -I$(srcdir)  -I$(top_builddir)/src
+METASOURCES = AUTO
+noinst_LIBRARIES = libOpcode.a
+libOpcode_a_SOURCES = OPC_AABBCollider.cpp OPC_AABBTree.cpp \
+		OPC_BaseModel.cpp	OPC_BoxPruning.cpp OPC_Collider.cpp OPC_Common.cpp OPC_HybridModel.cpp	OPC_LSSCollider.cpp \
+		OPC_MeshInterface.cpp OPC_Model.cpp	OPC_OBBCollider.cpp Opcode.cpp OPC_OptimizedTree.cpp \
+		OPC_Picking.cpp	OPC_PlanesCollider.cpp OPC_RayCollider.cpp OPC_SphereCollider.cpp	OPC_SweepAndPrune.cpp \
+		OPC_TreeBuilders.cpp OPC_TreeCollider.cpp	OPC_VolumeCollider.cpp StdAfx.cpp Ice/IceAABB.cpp \
+		Ice/IceAABB.h Ice/IceAxes.h Ice/IceBoundingSphere.h Ice/IceContainer.cpp \
+	Ice/IceContainer.h Ice/IceFPU.h 	Ice/IceHPoint.cpp Ice/IceHPoint.h \
+	Ice/IceIndexedTriangle.cpp Ice/IceIndexedTriangle.h Ice/IceLSS.h 	Ice/IceMatrix3x3.cpp \
+	Ice/IceMatrix3x3.h Ice/IceMatrix4x4.cpp Ice/IceMatrix4x4.h Ice/IceMemoryMacros.h \
+		Ice/IceOBB.cpp Ice/IceOBB.h Ice/IcePairs.h Ice/IcePlane.cpp Ice/IcePlane.h \
+	Ice/IcePoint.cpp Ice/IcePoint.h 	Ice/IcePreprocessor.h Ice/IceRandom.cpp Ice/IceRandom.h \
+	Ice/IceRay.cpp Ice/IceRay.h Ice/IceRevisitedRadix.cpp 	Ice/IceRevisitedRadix.h \
+	Ice/IceSegment.cpp Ice/IceSegment.h Ice/IceTriangle.cpp Ice/IceTriangle.h Ice/IceTriList.h \
+		Ice/IceTypes.h Ice/IceUtils.cpp Ice/IceUtils.h OPC_AABBCollider.h OPC_AABBTree.h \
+	OPC_BaseModel.h OPC_BoxBoxOverlap.h OPC_BoxPruning.h OPC_Collider.h OPC_Common.h \
+	OPC_HybridModel.h OPC_IceHook.h OPC_LSSAABBOverlap.h OPC_LSSCollider.h \
+	OPC_LSSTriOverlap.h OPC_MeshInterface.h OPC_Model.h OPC_OBBCollider.h Opcode.h \
+	OPC_OptimizedTree.h OPC_Picking.h OPC_PlanesAABBOverlap.h OPC_PlanesCollider.h \
+	OPC_PlanesTriOverlap.h OPC_RayAABBOverlap.h OPC_RayCollider.h OPC_RayTriOverlap.h \
+	OPC_Settings.h OPC_SphereAABBOverlap.h OPC_SphereCollider.h OPC_SphereTriOverlap.h \
+	OPC_SweepAndPrune.h OPC_TreeBuilders.h OPC_TreeCollider.h OPC_TriBoxOverlap.h \
+	OPC_TriTriOverlap.h OPC_VolumeCollider.h Stdafx.h
